kubernetes/apps/home/mealie/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: home
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`mealie.homelab.local`)
    kind: Rule
    middlewares:
    - name: authelia
    services:
    - name: mealie
      port: 80
  tls:
    secretName: mealie-homelab-tls
